--- a/web_fun/core-assignment/week1/day2/github block/index.html
+++ b/web_fun/core-assignment/week1/day2/github block/index.html
@@ -12,7 +12,7 @@
         <img src="images\privateinvestocat.jpg" alt="image">
         <img src="images\puddle_jumper_octodex (1).jpg" alt="image">
         <img src="images\Sentrytocat_octodex.jpg" alt="image">
-        <h1>hello</h1>
+        <p>anwer</p>
     </div>
     
 </body>
