--- a/web_fun/core-assignment/week1/day4/profile_page/index.html
+++ b/web_fun/core-assignment/week1/day4/profile_page/index.html
@@ -51,7 +51,7 @@
     <div id="connection">
         <div class="topconnection flex">
             <h1>connection request</h1>
-<span>2</span>
+
         </div>
         <div class=" downconnection flex">
             <div class="tod">
@@ -68,6 +68,37 @@
         </div>
 
     </div>
+    <div id="yourconnection">
+        <div class="topconnection flex">
+            <h1>your connection</h1>
+
+        </div>
+        <div class=" downconnection flex">
+            <div class="flex">
+                <img src="" alt="">
+                <h1>Adrian D</h1>   
+            </div>
+            <div class=" flex ">
+                <img src="" alt="">
+                <h1>Anne J</h1>
+            </div>
+            <div class="flex">
+                <img src="" alt="">
+                <h1>Alayne T</h1>   
+            </div>
+            <div class=" flex ">
+                <img src="" alt="">
+                <h1>Arry Y</h1>
+                <div class="link">
+                    <a href="">view more</a>
+
+                </div>
+            </div>
+        </div>
+
+    </div>
+   
+    
    
 </body>
 </html>
